--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.show-sql=true
 
 spring.datasource.url = jdbc:mysql://localhost:3306/ppmtcourse
 spring.datasource.username=root
-spring.datasource.password=Pass@123
+spring.datasource.password=56316498
 
 #Using the right database platform is extremly important on Spring Boot 2.0
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
