--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,10 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.0</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.postgresql</groupId>
+		    <artifactId>postgresql</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
