--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,8 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-loading-overlay": "^1.0.1",
+    "react-promise-tracker": "^2.0.5",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
